# embedded_obj

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
embeddedobj/: Makefile  config.h  config.status  configure  configure.ac  libtool
embeddedobj/autom4te.cache/: output.0  output.1  requests  traces.1
embeddedobj/po/: Makefile  Makefile.in
embeddedobj/src/: Makefile  Makefile.am  Makefile.in  embeddedobj-0.1.pc  embeddedobj-0.1.pc.in  embeddedobj.h  lib.c
embeddedobj/src/.deps/: lib.Plo
